--- a/app/views/trips/show.erb
+++ b/app/views/trips/show.erb
@@ -1,7 +1,7 @@
 <a href='/trips'>Back to All Trips</a>
 <main class="show">
   <h1 class="title">trip ID: <%=@trip.id%></h1>
-    <p>Duration in Minutes: <%= @trip.calculate_duration%></p>
+    <p>Duration in Minutes: <%= @trip.duration%></p>
     <p>Start Date: <%= @trip.start_date%></p>
     <p>Starting Station: <%= @trip.starting_station_name%></p>
     <p>End Date: <%= @trip.end_date%></p>
