--- a/app/views/trips/dashboard.erb
+++ b/app/views/trips/dashboard.erb
@@ -11,8 +11,8 @@
         <%= month %>: <%= @trips.number_of_rides_per_time_period("month", month) %>
       <% end %>
     <% end %></p>
-  <p>Most Ridden Bike: <%= @trips.find_min_or_max_id("bike_id", "DESC") %> Number of Rides: <%= @trips.find_min_or_max("bike_id", "DESC")%></p>
-  <p>Least Ridden Bike: <%= @trips.find_min_or_max_id("bike_id", "ASC") %> Number of Rides: <%= @trips.find_min_or_max("bike_id", "ASC") %></p>
+  <p>Most Ridden Bike: <%= @trips.find_min_or_max_id("bike_id", "DESC") %> Number of Rides: <%= @trips.find_min_or_max_count("bike_id", "DESC")%></p>
+  <p>Least Ridden Bike: <%= @trips.find_min_or_max_id("bike_id", "ASC") %> Number of Rides: <%= @trips.find_min_or_max_count("bike_id", "ASC") %></p>
   <p>Users Subscribed: <%= @trips.find_user_count_for_subscription_type("subscriber") %> Percentage: <%= @trips.calculate_percentage("subscriber") %>%</p>
   <p>Users Not Subscribed: <%= @trips.find_user_count_for_subscription_type("customer")%> Percentage: <%= @trips.calculate_percentage("customer") %>%</p>
   <p>Date With Most Trips:  <%= @trips.find_min_or_max_id("start_date", "DESC")%> Number of Trips: <%= @trips.find_min_or_max_count("start_date", "DESC") %></p>
